- extend Makefile to link against Ipopt if IPOPT=true is set
- added function SCIPvarsGetProbvarBinary() in pub_var.h; gets active, fixed, or multi-aggregated problem variables of binary variables and corresponding negated status
- added SCIPsortPtrPtrLongInt() and corresponding sorting/inserting/deleting methods in pub_misc.h and necessary defines in misc.c

features:
- adjusted hard memory limit to (soft memory limit)*1.1 + 100mb in check.sh, checkcount.sh, check_cplex.sh, check_cluster.sh and check_cbc.sh
- new interface to QSopt due to Daniel Espinoza
- new reader for reading and writing FlatZinc models
- new presolving step in cons_knapsack.c, same like "simplifyinequalities" in cons_linear.c
- each variable has now two additional SCIP_Real parameter which define a lazy lower and upper bound; lazy means that there exists 
  constraints which implies these (lazy) bounds. If the lazy lower or upper bound is greater or less than the local lower or upper bound, 
  respectively, then the corresponding bound is not put into the LP. The bounds are set to minus and plus infinity per default which yields 
  the same behavior as before. With the methods SCIPchgVarLbLazy() and SCIPchgVarUbLazy() these bounds can be set. 
  This is of interest if SCIP gets used as a  branch-and-price framework.
- added new timing point, SCIP_HEURTIMING_DURINGPRICINGLOOP, for calling heuristics; If this timing point is used the corresponding 
  heuristics is called during the pricing loop of variables; we also added this timing point to heur_simplerounding.{h,c} which
  has the effect that a LP solution which satisfies all integrality conditions during the pricing loop is detected
- extended hybrid relpscost branching rule by usage of the average length of conflicts a variable appears in
- one can now write indicator constraints in LP-format
- now it's possible to write strings with more than "SCIP_MAXSTRLEN" amount of characters in all message.c functions